--- a/project metadata/TODO
+++ b/project metadata/TODO
@@ -1,17 +1,10 @@
 
 
-Sign-in system using put request
-
 Create account
     Random salts/userID
 
-Seperate out HTTP response headers
-    Add more headers
+Add more HTTP headers
 
-Seperate out all conn stuff
+Add addTransaction
 
-readme.txt
-
-
-Generalize what database to use in runSQL.py
 
