--- a/project metadata/TODO
+++ b/project metadata/TODO
@@ -1,10 +1,12 @@
+Sign in button becomes profile when signed in
 
+Cart/Add to cart button on search
+Add addTransaction
 
 Create account
     Random salts/userID
 
 Add more HTTP headers
 
-Add addTransaction
 
 
